--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "dan@danherbert.io",
   "devDependencies": {
     "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
+    "enjine": "github:pocketninja/enjine",
     "postcss": "^8.4.8",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
