--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
     "enjine": "github:pocketninja/enjine",
+    "html-loader": "^3.1.0",
     "postcss": "^8.4.8",
     "postcss-import": "^14.0.2",
     "postcss-loader": "^6.2.1",
